<resources>
    <string name="app_name">SelfBalancingRobot</string>
    <string name="setting_targets_error">Error setting targets</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="action_settings">Settings</string>
    <string name="pref_robot_robotIpSummary">IP of Self Balancing Robot</string>
    <string name="pref_robotIp">Robot IP</string>
    <string name="pref_general">General</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">Application for Self Balancing Robot control</string>
    <string name="pref_app_version">1.0</string>
    <string name="pref_title_version">Version</string>
</resources>
